Overview doc done and minor changes to Budget and Category doc
